# abbibench_toolkit_core

./: pyproject.toml
src/abbibench_toolkit_core/: __init__.py  contract.py  datasets.py  eval.py  paths.py  spec.py
src/abbibench_toolkit_core/data/: __init__.py  download.py  repo.py
