[project]
name = "abbibench-toolkit-core"
version = "0.1.0"
description = "Core contracts and evaluation utilities for AbBiBench-style antibody affinity benchmarking."
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Jaejoon Kim", email = "jjkim030309@gmail.com" }]
dependencies = [
  "pandas>=2.0",
  "numpy>=1.24",
  "scipy>=1.10",
]

[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/abbibench_toolkit_core"]
